Updated to Spring Boot 2